# my_ros2_robot

./: README.md  frames_2025-10-16_12.27.00.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autonomous_bot/share/ament_index/resource_index/package_run_dependencies/: autonomous_bot
install/autonomous_bot/share/ament_index/resource_index/parent_prefix_path/: autonomous_bot
install/autonomous_bot/share/autonomous_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_bot/share/autonomous_bot/cmake/: autonomous_botConfig-version.cmake  autonomous_botConfig.cmake
install/autonomous_bot/share/autonomous_bot/config/: mapping.rviz  slam_params.yaml
install/autonomous_bot/share/autonomous_bot/environment/: ament_prefix_path.dsv  path.dsv
install/autonomous_bot/share/autonomous_bot/launch/: mapping.launch.py  simulation.launch.py  slam.launch.py
install/autonomous_bot/share/autonomous_bot/urdf/: bot.urdf  bot.urdf.xacro
install/autonomous_bot/share/autonomous_bot/worlds/: test_world.world
log/: latest_build
src/autonomous_bot/: CMakeLists.txt  package.xml
src/autonomous_bot/config/: mapping.rviz  slam_params.yaml
src/autonomous_bot/launch/: mapping.launch.py  simulation.launch.py  slam.launch.py
src/autonomous_bot/urdf/: bot.urdf  bot.urdf.xacro
src/autonomous_bot/worlds/: test_world.world
